[gd_scene load_steps=6 format=3 uid="uid://bhi00njaa1vq3"]

[ext_resource type="Script" path="res://scenes/menus/game_over_menu.gd" id="1_qutcf"]
[ext_resource type="Shader" path="res://shader/paused.gdshader" id="1_rxv1i"]
[ext_resource type="PackedScene" uid="uid://kpyn3d6kwgcy" path="res://scenes/menus/ui_click_audio.tscn" id="3_4ke6q"]
[ext_resource type="Theme" uid="uid://t4eahik3spf0" path="res://assets/themes/SettingsButtons.tres" id="3_afm5b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6k54j"]
shader = ExtResource("1_rxv1i")
shader_parameter/blur_amount = 1.0

[node name="GameOverMenu" type="CanvasLayer" node_paths=PackedStringArray("score_text", "enemies_killed_text")]
script = ExtResource("1_qutcf")
score_text = NodePath("VBoxContainer/Score")
enemies_killed_text = NodePath("VBoxContainer/EnemiesKilled")

[node name="BlurBackground" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_6k54j")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.690196)

[node name="BlurBackground2" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.32549)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_afm5b")
theme_override_constants/separation = 25
alignment = 1

[node name="GameOver" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_afm5b")
theme_override_font_sizes/font_size = 40
text = "Game Over!"
horizontal_alignment = 1

[node name="Score" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_afm5b")
theme_override_font_sizes/font_size = 26
text = "Score: ???"
horizontal_alignment = 1

[node name="EnemiesKilled" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_afm5b")
theme_override_font_sizes/font_size = 26
text = "Enemies Killed: ???"
horizontal_alignment = 1

[node name="RoundsSurvived" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("3_afm5b")
theme_override_font_sizes/font_size = 26
text = "Rounds Survived: ???"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("3_afm5b")
theme_override_font_sizes/font_size = 26
text = "Play Again"

[node name="QuitToMenuButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("3_afm5b")
theme_override_font_sizes/font_size = 26
text = "Quit to Menu"

[node name="UIClickAudio" parent="." instance=ExtResource("3_4ke6q")]

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitToMenuButton" to="." method="_on_quit_to_menu_button_pressed"]
